<resources>

    <string name="pwd1">请输入密码</string>
    <string name="pwd2">请再次输入密码</string>

    <string name="app_name">CodeAndExpress</string>
    <string name="user_login">用户登录</string>
    <string name="admin_login">管理员登录</string>
    <string name="courier_login">快递员登录</string>


    <string name="sender_name_input">请输入寄件人姓名</string>
    <string name="sender_tel_input">请输入寄件人手机号码</string>
    <string name="receiver_name_input">请输入收件人姓名</string>
    <string name="receiver_tel_input">请输入收件人手机号码</string>
    <string name="receiver_add_input">请输入收货地址</string>
    <string name="receiver_id_input">请输入快递单号</string>
    <string name="c_idcard_input">请输入身份证号</string>
    <string name="c_name_input">请输入真实姓名</string>
    <string name="c_tel_input">请输入手机号码</string>
    <string name="c_reg_input">请输入派送区</string>
    <string name="courier_scan">点击扫码</string>

    <string name="hint_address">请输入收货地址</string>
    <string name="hint_phone_num">青输入手机号</string>
    <string name="hint_id_num">请输入身份证号</string>
    <string name="hint_search_user_info">请输入关键字</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">无效的邮箱</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码无效</string>
    <string name="error_field_required">此处不可为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
